guestbook/guestbook-ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-ui
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
  selector:
    app: guestbook-ui
