guestbook/guestbook-ui-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: guestbook
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: PathPrefix(`/guestbook`)
      middlewares:
      - name: guestbook
        namespace: default
      services:
        - name: guestbook-ui
          port: 8008
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: guestbook
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /guestbook
